--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+@keyframes pisca{
+    0% {opacity: 0.2;}
+    50% {opacity: 1;}
+    100% {opacity: 0.2;}
+}
+
 body {
     margin: 150px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -18,7 +25,7 @@ body {
     background: linear-gradient(to right, #E8E8E8, #C1C1C1);
     margin-left: 30px;
     border: 2px solid #555;
-    display: flex;
+    display: flex; 
     flex-direction: column;
 }
 
@@ -78,15 +85,67 @@ body {
 
 .d-1-left{
     flex: 1;
-    background-color: red;
-
+    display: flex;
+    flex-direction:column;
+    padding-left: 20px;
 }
+
+.d-1-1{
+    height: 50px;
+    background-color: #48C079;
+    display: flex;
+    align-items: center;
+}
+.d-1-2{
+    height: 50px;
+    background-color: blueviolet;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.d-1-3{
+    height: 50px;
+    background-color: crimson;
+}
+.numero {
+    display: inline-block;
+    width: 30px;
+    height: 40px;
+    border: 1px solid black;
+    text-align: center;
+    line-height: 40px;
+    font-size: 25px;
+}
+.pisca{
+    animation-name: pisca;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+.d-1-4{
+    flex: 1;
+    background-color: deepskyblue;
+    line-height: 30px;
+}
+
 .d-1-right{
     width: 90px;
-    background-color: blue;
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
-
+.d-1-image{
+    border: 1px solid black;
+    background-color: white;
+    text-align: center;
+    font-size: 14px;
+}
+.d-1-image img{
+    width: 100%;
+}
+.d-1-image.small{
+    width: 80%;
+    font-size: 12px;
+}
 .d-2{
     height: 50px;
     font-size: 14px;
